deployment_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product-prod
          image: gcr.io/project-1-400619/product
          imagePullPolicy: Always
          
          ports:
            - containerPort: 3000
