service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: nodeport
