service_prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-prod
spec:
  selector:
    app: product  
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 3000
  type: LoadBalancer
