ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-micro-ingress3
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
